Report Generation Functionality next set

--- a/templates/generate_pdf.html
+++ b/templates/generate_pdf.html
@@ -205,8 +205,8 @@
             {% endfor %}
         </ul>
         <br>
-        <p>Dr. Einstein</p>
-        <img src="{% static 'assets/img/signature.png' %}" alt="Doctor's Signature">
+        <p>Dr. Beethoven</p>
+        <img src="{% static 'assets/img/signature (1).png' %}" alt="Doctor's Signature">
         <p>Board-Certified Orthopedic Specialist</p>
         <p>OsteoArthoScan Clinic</p>
     </div>
