--- a/templates/generate_pdf.html
+++ b/templates/generate_pdf.html
@@ -1,57 +1,44 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Medical Report</title>
-        <style>
-    /* Other CSS styles */
-    body::before {
-    content: "OsteoArthoScan";
-    opacity: 0.2; /* Adjust the opacity as needed */
-    font-size: 5rem; /* Adjust the font size as needed */
-    color: blue; /* Change the color to blue */
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-45deg); /* Add rotation for inclined effect */
-    z-index: -1; /* Place the watermark behind the content */
-}
-
-    /* Rest of your CSS styles */
-    @media print {
-            /* Print-specific styles */
-            body::before {
-                display: none; /* Hide the watermark when printing */
-            }
-
-            .container {
-                display: flex; /* Use a block layout for printing */
-
-            }
-
-            .column {
-                width: 100%;
-                padding: 10px;
-            }
-
-            /* Additional print-specific styles for layout, fonts, etc. */
+<head>
+    <title>Medical Report</title>
+    <style>
+        /* Other CSS styles */
+        body::before {
+            content: "OsteoArthoScan";
+            opacity: 0.2;
+            font-size: 5rem;
+            color: blue;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(-45deg);
+            z-index: -1;
         }
-            .container {
-                display: flex;
-            }
-    
-            .column {
-                flex: 1;
-                padding: 10px;
-            }
-            
-            body {
+
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .column {
+            flex: 1;
+            padding: 10px;
+        }
+
+        .column img {
+            max-width: 100%; /* Set a maximum width for images */
+            height: auto;
+        }
+
+        body {
             margin: 0;
             padding: 0;
-            }
+        }
 
-            .container_1 {
-            padding: 100px; /* Adjust the padding for spacing */
+        .container_1 {
+            padding: 100px;
             text-align: left;
         }
 
@@ -74,114 +61,110 @@
         }
 
         .print-button {
-        position: absolute;
-        top: 10px; /* Adjust the top distance as needed */
-        right: 10px; /* Adjust the right distance as needed */
-    }
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
 
-    .print-button button {
-        background-color: #007BFF; /* Button background color */
-        color: white; /* Button text color */
-        border: none; /* Remove button border */
-        cursor: pointer;
-        padding: 10px 20px; /* Adjust the padding as needed */
-        border-radius: 5px; /* Add rounded corners */
-    }
+        .print-button button {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            cursor: pointer;
+            padding: 10px 20px;
+            border-radius: 5px;
+        }
 
-        </style>
-        <meta charset="utf-8">
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      
-        <title>Osteo Arthritis Severity Detection System</title>
-        <meta content="" name="description">
-        <meta content="" name="keywords">
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.1/html2pdf.bundle.min.js"></script>
-        <!-- Favicons -->
-        <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
-        <link href="{% static 'assts/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-        <!-- Vendor CSS Files -->
-        <link href="{% static 'assets/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet">
-        <link href="{% static 'assets/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
-        <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-        <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
-        <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
-        <link href="{%static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
-        <link href="{% static 'assets/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
-        <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
-        <!-- Template Main CSS File -->
-        <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
-        <!-- =======================================================
-        * Template Name: Medilab
-        * Updated: Sep 18 2023 with Bootstrap v5.3.2
-        * Template URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
-        * Author: BootstrapMade.com
-        * License: https://bootstrapmade.com/license/
-        ======================================================== -->
-      </head>
-      <body style="background-color: #f0f8ff;">
-        <!-- ======= Top Bar ======= -->
-        <div id="topbar" class="d-flex align-items-center fixed-top">
-          <div class="container d-flex justify-content-between">
+    </style>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>Osteo Arthritis Severity Detection System</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.1/html2pdf.bundle.min.js"></script>
+    <!-- Favicons -->
+    <link href="{% static 'assets/img/favicon.png' %}" rel="icon">
+    <link href="{% static 'assts/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- Vendor CSS Files -->
+    <link href="{% static 'assets/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
+    <link href="{%static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/remixicon/remixicon.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
+    <!-- Template Main CSS File -->
+    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
+    <!-- =======================================================
+    * Template Name: Medilab
+    * Updated: Sep 18 2023 with Bootstrap v5.3.2
+    * Template URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
+</head>
+<body style="background-color: #f0f8ff;">
+    <!-- ======= Top Bar ======= -->
+    <div id="topbar" class="d-flex align-items-center fixed-top">
+        <div class="container d-flex justify-content-between">
             <div class="contact-info d-flex align-items-center">
-              <i class="bi bi-envelope"></i> <a href="mailto:contact@example.com">teamosteoarthoscan@gmail.com</a>
-              <i class="bi bi-phone"></i> +1 667 464 5415
+                <i class="bi bi-envelope"></i> <a href="mailto:contact@example.com">teamosteoarthoscan@gmail.com</a>
+                <i class="bi bi-phone"></i> +1 667 464 5415
             </div>
-          </div>
         </div>
-      <!-- Include SweetAlert JavaScript and CSS -->
-      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-      
-      <!-- Your HTML registration form -->
-      <!-- Include SweetAlert JavaScript and CSS -->
-      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-      
-        <!-- ======= Header ======= -->
-        <header id="header" class="fixed-top">
-            <div class="container d-flex align-items-center">
-                <h1 class="logo me-auto">OsteoArthoScan</h1>
-                <!-- Uncomment below if you prefer to use an image logo -->
-                <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-                <div class="print-button">
-                    <button onclick="window.print()">Print/Save as PDF</button>
-                </div>
-                <nav id="navbar" class="navbar order-last order-lg-0">
-                    <ul>
-                        <i class="bi bi-list mobile-nav-toggle"></i>
-                    </ul>
-                </nav><!-- .navbar -->
+    </div>
+    <!-- Include SweetAlert JavaScript and CSS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+    <!-- ======= Header ======= -->
+    <header id="header" class="fixed-top">
+        <div class="container d-flex align-items-center">
+            <h1 class="logo me-auto">OsteoArthoScan</h1>
+            <!-- Uncomment below if you prefer to use an image logo -->
+            <!-- <a href="index.html" class=" logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+            <div class="print-button">
+                <button onclick="window.print()">Print/Save as PDF</button>
             </div>
-            
-        </header><!-- End Header -->
-        <br>
-        <br><br><br><br>
-        <div class="container">
-            <!-- Patient Information Table -->
-            <h2> Patient Information </h2>
-            <table>
-                <tr>
-                    <th>Name:</th>
-                    <td>{{ name }}</td>
-                    <th>Age:</th>
-                    <td>{{ age }}</td>
-                </tr>
-                <tr>
-                    <th>Gender:</th>
-                    <td>{{ gender }}</td>
-                    <th>Phone Number:</th>
-                    <td>{{ phone }}</td>
-                </tr>
-                <tr>
-                    <th>Scan Date:</th>
-                    <td>{{ date }}</td>
-                    <th> Email Address:</th>
-                    <td>{{ email }}</td>
-                </tr>
-            </table>
+            <nav id="navbar" class="navbar order-last order-lg-0">
+                <ul>
+                    <i class="bi bi-list mobile-nav-toggle"></i>
+                </ul>
+            </nav><!-- .navbar -->
         </div>
-<br><br>
+    </header><!-- End Header -->
+    <br>
+    <br><br><br><br>
+    <div class="container">
+        <!-- Patient Information Table -->
+        <h2> Patient Information </h2>
+        <table>
+            <tr>
+                <th>Name:</th>
+                <td>{{ name }}</td>
+                <th>Age:</th>
+                <td>{{ age }}</td>
+            </tr>
+            <tr>
+                <th>Gender:</th>
+                <td>{{ gender }}</td>
+                <th>Phone Number:</th>
+                <td>{{ phone }}</td>
+            </tr>
+            <tr>
+                <th>Scan Date:</th>
+                <td>{{ date }}</td>
+                <th> Email Address:</th>
+                <td>{{ email }}</td>
+            </tr>
+        </table>
+    </div>
+    <br><br>
     <div class="container">
         <!-- Input X-ray Image -->
         <div class="column">
@@ -189,21 +172,19 @@
             <h2>X-ray</h2>
             <img src="{{ xray_image_url }}" alt="Input X-ray">
         </div>
-
         <!-- Heat Map Image -->
         <div class="column">
             <!-- Heat Map Image -->
             <h2>Explainability</h2>
             <img src="{{ heat_map_image_url }}" alt="Heat Map">
         </div>
-
         <!-- Analysis Plot -->
         <div class="column">
             <h2>Grade Analysis</h2>
             <img src="{{ analysis_plot_image_url }}" alt="Analysis Plot">
         </div>
     </div>
-         <!-- Observations and Impressions -->
+    <!-- Observations and Impressions -->
     <div class="container_1">
         <h2>Observations and Impressions</h2>
         <ul>
@@ -211,7 +192,6 @@
                 <li><strong>{{ observation }}</strong></li>
             {% endfor %}
         </ul>
-    
         <!-- Additional content, e.g., doctor's notes, recommendations, etc. -->
         <h2>Additional Notes</h2>
         <ul>
@@ -220,26 +200,18 @@
             {% endfor %}
         </ul>
         <br>
-
-    <p>Dr. Beethoven</p>
-    <img src="{% static 'assets/img/sign_crop (1).png' %}" alt="Doctor's Signature">
-    <p>Board-Certified Orthopedic Specialist</p>
-    <p>OsteoArthoScan Clinic</p>
-   </div>
-    <!-- Observations and Impressions -->
+        <p>Dr. Beethoven</p>
+        <img src="{% static 'assets/img/sign_crop (1).png' %}" alt="Doctor's Signature">
+        <p>Board-Certified Orthopedic Specialist</p>
+        <p>OsteoArthoScan Clinic</p>
+    </div>
     <!-- Add your CSS styles here, e.g., for page layout and formatting -->
-    <!-- Add your CSS styles here, e.g., for page layout and formatting -->
-    <!-- Your existing HTML code -->
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.0.0-alpha.12/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.1/html2pdf.bundle.min.js"></script>
-
     <script>
- function printPage() {
-    window.print();
-}
+        function printPage() {
+            window.print();
+        }
     </script>
-    </body>
-    </html>  
 </body>
 </html>
